--- a/aufgaben/globularcluster.tex
+++ b/aufgaben/globularcluster.tex
@@ -8,9 +8,9 @@ Ein Kugelsternhaufen (kurz auch Kugelhaufen) ist eine enge,
 kugel\-f"ormige Ansammlung sehr vieler Sterne, die untereinander
 gravitativ gebunden sind. Typische Gr"ossen sind einige 100000 Sterne.
 Gegenseitige Bahnver"anderungen sind im dicht bev"olkerten Zentrum
-häufig, was die sph"arische Gestalt zur Folge hat. Kugelsternhaufen
+h"aufig, was die sph"arische Gestalt zur Folge hat. Kugelsternhaufen
 sind ihrerseits gravitativ an Galaxien gebunden, in deren Halo sie
-sich weiträumig bewegen. Sie bestehen vorwiegend aus alten, roten
+sich weitr"aumig bewegen. Sie bestehen vorwiegend aus alten, roten
 Sternen, die nur wenige schwere Elemente enthalten.
 \end{quote}
 
