add numa and pipeline images

--- a/aufgaben/aufgaben.tex
+++ b/aufgaben/aufgaben.tex
@@ -106,6 +106,7 @@ wurden.
 \input{ising.tex}
 \input{globularcluster.tex}
 \input{quat.tex}
+\input{julia.tex}
 
 \subsection{Weitere Themen}
 Der Grundlagenteil kann nicht alle Techniken behandeln, die in der
@@ -165,6 +166,45 @@ Die Kurztests werden zum Teil auf dem Compute-Server der
 Gruppe Mathematik durchgef"uhrt.
 Daher ben"otigen Sie f"ur die Kurztests einen Computer mit einer
 funktionierenden SSH Implementation.
+
+\section{Aufgabenzuteilung}
+\def\aufnr#1{\raisebox{0pt}[24pt][14pt]{#1}}
+\begin{center}
+\begin{tabular}{|r|l|l|}
+\hline
+Nr&Aufgabe&Team\\
+\hline
+\aufnr{ 1}&Crypto Cracking                &\\
+\hline
+\aufnr{ 2}&CAT Scanner                    &Marco Bassotti, Dario Tr"utsch (1)\\
+\hline
+\aufnr{ 3}&Ising Modell                   &Daniel Monti, Pascal Stump (2)\\
+\hline
+\aufnr{ 4}&Kugelsternhaufen               &Daniel Monti, Pascal Stump (1)\\
+          &                               &Marco Bassotti, Dario Tr"utsch (2)\\
+\hline
+\aufnr{ 5}&quaternionisches Apfelm"annchen&Andreas Linggi, Stefan Steiner (1)\\
+\hline
+\aufnr{ 6}&Julia Mengen                   &\\
+\hline
+\aufnr{ 7}&OpenFOAM                       &\\
+\hline
+\aufnr{ 8}&MapReduce                      &Daniel Monti, Pascal Stump (2)\\
+\hline
+\aufnr{ 9}&Monte Carlo                    &\\
+\hline
+\aufnr{10}&SOR und SSOR                   &\\
+\hline
+\aufnr{11}&Potentialproblem               &\\
+\hline
+\aufnr{12}&W"armeleitung                  &\\
+\hline
+\aufnr{13}&Greensche Funktion             &Andreas Linggi, Stefan Steiner (1)\\
+\hline
+\aufnr{14}&Stosswellen                    &Fabian Klein, Thomas Ziegler\\
+\hline
+\end{tabular}
+\end{center}
 
 \end{document}
  
