--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -87,20 +87,18 @@ Danilo Bargen,\\
 Marco Bassotti,
 Reto Christen,
 Gregor Dengler,\\
-Aida Hassanpour,
 Fabian Klein,
-Flavio La Morea,\\
-Andreas Linggi,
+Flavio La Morea,
+Andreas Linggi,\\
 Tabea M\'endez,
 Daniel Monti,
-Lukas Murer,
+Lukas Murer,\\
 Nicol\'as Rom\'an L"uthold,
 Christian Schmid,
 Philipp Solenthaler,
 Pascal Stump,
 Stefan Steiner,
-Yannick Suter,
-Dario Tr"utsch,
+Dario Tr"utsch,\\
 Andreas Weilenmann,
 Thomas Ziegler
 \end{flushright}
