--- a/skript/maschinen.tex
+++ b/skript/maschinen.tex
@@ -130,14 +130,15 @@ Pipeline-Blasen oder Pipeline-Stalls kommen.
 \begin{figure}
 \begin{center}
 \begin{tabular}{cc}
-\begin{minipage}[b]{0.45\hsize}
+%\begin{minipage}[b]{0.429\hsize}
+\begin{minipage}[b]{0.434\hsize}
 \vsize1.5truein
 \includegraphics[width=\hsize]{images/pipeline1.pdf}
 \end{minipage}&
-\begin{minipage}[b]{0.45\hsize}
+\begin{minipage}[b]{0.5\hsize}
 \includegraphics[width=\hsize]{images/pipeline2.pdf}
 %\vskip1truecm
-\phantom{.}
+%\phantom{.}
 \end{minipage}
 \end{tabular}
 \end{center}
